# ==========================================================
# Copyright 2023 Dietrich Bollmann
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#      http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ----------------------------------------------------------
# pyproject.toml:
# 
# Python project settings file for the glottai-cedict package.
# 
# ----------------------------------------------------------

[project]
name = "python-import-graph"
version = "2023.03.07"
description = "Show the local import graph given a Python source file and directory"
authors = [
    {name = "Dietrich Bollmann", email = "dietrich@newskylabs.net"},
]
dependencies = [
    "click>=8.1.3",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.scripts]
python-import-graph = "python_import_graph.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

[tool.pdm.build]
package-dir = "src"
